import stylesheet correctly & add jest types

--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,9 @@
 
   <script type="module" src="/build/app.esm.js"></script>
   <script nomodule src="/build/app.js"></script>
+  <!-- uncomment this if using any global styles -->
   <!-- <link href="/build/app.css" rel="stylesheet"> -->
-
+  <link href="/assets/esri/themes/dark/main.css" rel="stylesheet">
   <link rel="apple-touch-icon" href="/assets/icon/icon.png">
   <link rel="icon" type="image/x-icon" href="/assets/icon/favicon.ico">
   <link rel="manifest" href="/manifest.json">
